--- a/css/styles.css
+++ b/css/styles.css
@@ -11710,7 +11710,7 @@ body {
 
 .projects-section {
   padding: 10rem 0;
-  background: rgba(71, 0, 63, 0.8);
+  color: rgba(71, 0, 63, 0.8);
 }
 .projects-section .featured-text {
   padding: 2rem;
