--- a/css/styles.css
+++ b/css/styles.css
@@ -11658,7 +11658,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("https://images.hdqwalls.com/download/retro-city-sunset-4k-8y-1920x1080.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
