--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ align-items: center;
 justify-content: center;
 }
 .child222 {
-background-color: 
+background-color:
 }
 
 
@@ -11750,7 +11750,7 @@ body {
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("../assets/img/bg-signup.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 75%, #000 100%), url("https://wallpapercave.com/wp/wp6218263.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
